--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,2 +1,2 @@
-clientId=HIER EINFÜGEN
-secretId=HIER EINFÜGEN
+clientId=a6cf81267ff2452581924c773609d0a2
+secretId=211e629972c6491589db5004474ccc87
